append() to html(composite_string) Added loading condition to library

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 		<div class="sidebar-section">
 			<h2>Library</h2>
-			<ul class="sections-list" id="plex_section_list"></ul>
+			<ul class="sections-list" id="plex_section_list"><li>Loading...</li></ul>
 		</div><!-- end .sidebar-section -->
 
 		<div class="sidebar-section">
