Cleaned up HTML.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head profile="http://www.w3.org/2005/10/profile">
-  <link rel="icon"
-        type="image/x-icon"
-        href="./assets/images/favicon.ico">
-
 	<meta charset=utf-8 />
 	<title>Plex Export</title>
 	<meta name="viewport" content="initial-scale=1,minimum-scale=1,maximum-scale=1" />
+	<link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
 
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 	<link rel="stylesheet" media="all and (max-device-width: 480px)" href="assets/css/iphone.css">
