--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 	<link rel="stylesheet" media="all and (max-device-width: 480px)" href="assets/css/iphone.css">
-	<link rel="stylesheet" media="all and (-webkit-min-device-pixel-ratio: 2" href="assets/css/iphone-retina.css" />
+	<link rel="stylesheet" media="all and (-webkit-min-device-pixel-ratio: 2)" href="assets/css/iphone-retina.css" />
 
 	<script src="assets/js/jquery.1.4.4.min.js"></script>
 	<script src="assets/js/utils.js"></script>
