--- a/index.html
+++ b/index.html
@@ -46,10 +46,15 @@
 			</ul>
 		</div><!-- end .sidebar-section -->
 
-		<div class="sidebar-section" id="plex_genre_list_section">
-			<h2>Genres</h2>
-			<ul class="generic-list" id="plex_genre_list"></ul>
-		</div><!-- end .sidebar-section -->
+    <div class="sidebar-section" id="plex_genre_list_section">
+      <h2>Genres</h2>
+      <ul class="generic-list" id="plex_genre_list"></ul>
+    </div><!-- end .sidebar-section -->
+
+    <div class="sidebar-section" id="plex_director_list_section">
+      <h2>Directors</h2>
+      <ul class="generic-list" id="plex_director_list"></ul>
+    </div><!-- end .sidebar-section -->
 
 	</div><!-- end #sidebar -->
 
