Added Seen / Not Seen to Menu

--- a/index.html
+++ b/index.html
@@ -45,16 +45,22 @@
 				<li data-sort="release">By release date</li>
 			</ul>
 		</div><!-- end .sidebar-section -->
+	
+		<div class="sidebar-section" id="plex_seen_list_section">
+			<h2>Seen</h2>
+			<ul class="generic-list" id="plex_seen_list">
+			</ul>
+		</div>
 
-    <div class="sidebar-section" id="plex_genre_list_section">
-      <h2>Genres</h2>
-      <ul class="generic-list" id="plex_genre_list"></ul>
-    </div><!-- end .sidebar-section -->
+		<div class="sidebar-section" id="plex_genre_list_section">
+			<h2>Genres</h2>
+			<ul class="generic-list" id="plex_genre_list"></ul>
+		</div><!-- end .sidebar-section -->
 
-    <div class="sidebar-section" id="plex_director_list_section">
-      <h2>Directors</h2>
-      <ul class="generic-list" id="plex_director_list"></ul>
-    </div><!-- end .sidebar-section -->
+		<div class="sidebar-section" id="plex_director_list_section">
+			<h2>Directors</h2>
+			<ul class="generic-list" id="plex_director_list"></ul>
+		</div><!-- end .sidebar-section -->
 
 	</div><!-- end #sidebar -->
 
