Add recently added sorting
Signed-off-by: botho <sbothorel@free.fr>

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 				<li class="current" data-sort="title"><em>asc</em>By title</li>
 				<li data-sort="rating">By rating</li>
 				<li data-sort="release">By release date</li>
+				<li data-sort="addedAt">By recently added</li>
 			</ul>
 		</div><!-- end .sidebar-section -->
 	
