Replaced old redirect domain links

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	</div><!-- end #main -->
 
 	<div id="footer">
-		<p><a href="http://l0ke.com/bl">Plex</a> + <a href="http://l0ke.com/bb">Plex Export</a><span id="last_updated"></span></p>
+		<p><a href="https://www.plex.tv/">Plex</a> + <a href="http://hybridlogic.co.uk/code/standalone/plex-export/">Plex Export</a><span id="last_updated"></span></p>
 	</div><!-- end #footer -->
 
 </div><!-- end #container -->
